@@ -1,38 +1,30 @@
 package net.osdn.jpki.wrapper;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.OutputStream;
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.security.CodeSource;
-import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.pdfbox.io.IOUtils;
-import org.apache.pdfbox.pdmodel.PDDocument;
-import org.apache.pdfbox.pdmodel.interactive.digitalsignature.SignatureOptions;
-
+import com.sun.jna.Library;
+import com.sun.jna.Native;
+import com.sun.jna.Pointer;
 import com.sun.jna.platform.win32.Advapi32Util;
 import com.sun.jna.platform.win32.Win32Exception;
 import com.sun.jna.platform.win32.WinReg;
+import org.apache.pdfbox.pdmodel.PDDocument;
+import org.apache.pdfbox.pdmodel.interactive.digitalsignature.SignatureOptions;
 
 public class JpkiWrapper {
 	
-	private Pattern ERROR_CODE_PATTERN = Pattern.compile("!ErrorCode=([-]?[0-9]+),WinErrorCode=([-]?[0-9]+)");
+	private Pattern ERROR_CODE_PATTERN = Pattern.compile("!ErrorCode=(-?[0-9]+),WinErrorCode=([-]?[0-9]+)");
 	private static ClassLoader loader;
 	private static Class<?> clsJpkiWrapper;
 	private static Throwable initializeError;
@@ -47,51 +39,17 @@ public class JpkiWrapper {
 					null
 				);
 			} else {
-				boolean is64 = is64bitJavaVM();
-				String version = System.getProperty("java.version");
-				if(version != null && version.startsWith("1.")) {
-					addLibraryPath(jpkiInstallPath.getAbsolutePath());
-				} else {
-					// Java 9 以降、privateなリフレクション操作が警告されるようになったので、
-					// java.library.pathを書き換えずに DLL を参照可能なディレクトリーにコピーします。
-					File libraryPath = getLibraryPath();
-					if(is64) {
-						copy(new File(jpkiInstallPath, "JPKICSPSign64.dll"), new File(libraryPath, "JPKICSPSign64.dll"));
-						copy(new File(jpkiInstallPath, "JPKI_JNI64.dll"), new File(libraryPath, "JPKI_JNI64.dll"));
-						copy(new File(jpkiInstallPath, "JPKISign_JNI64.dll"), new File(libraryPath, "JPKISign_JNI64.dll"));
-						copy(new File(jpkiInstallPath, "JPKIServiceAPI64.dll"), new File(libraryPath, "JPKIServiceAPI64.dll"));
-					} else {
-						copy(new File(jpkiInstallPath, "JPKICSPSign.dll"), new File(libraryPath, "JPKICSPSign.dll"));
-						copy(new File(jpkiInstallPath, "JPKI_JNI.dll"), new File(libraryPath, "JPKI_JNI.dll"));
-						copy(new File(jpkiInstallPath, "JPKISign_JNI.dll"), new File(libraryPath, "JPKISign_JNI.dll"));
-						copy(new File(jpkiInstallPath, "JPKIServiceAPI.dll"), new File(libraryPath, "JPKIServiceAPI.dll"));
-					}
-				}
 				loader = createClassLoader(jpkiInstallPath);
 				clsJpkiWrapper = Class.forName("net.osdn.jpki.wrapper.internal.JpkiWrapperInternal", true, loader);
 			}
-		} catch (URISyntaxException e) {
-			initializeError = e;
-			e.printStackTrace();
-		} catch (IOException e) {
+		}
+		catch (IOException e) {
 			initializeError = e;
 			e.printStackTrace();
 		} catch (ClassNotFoundException e) {
 			initializeError = e;
 			e.printStackTrace();
-		} catch (SecurityException e) {
-			initializeError = e;
-			e.printStackTrace();
-		} catch (IllegalArgumentException e) {
-			initializeError = e;
-			e.printStackTrace();
-		} catch (NoSuchFieldException e) {
-			initializeError = e;
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			initializeError = e;
-			e.printStackTrace();
-		} catch(UnsatisfiedLinkError e) {
+		} catch(Exception e) {
 			initializeError = e;
 			e.printStackTrace();
 		}
@@ -102,7 +60,7 @@ public class JpkiWrapper {
 	private Method methodSetApplicationVersion;
 	private Method methodAddSignature;
 	
-	public JpkiWrapper() throws JpkiException, IOException, ClassNotFoundException, NoSuchFieldException, InstantiationException, IllegalAccessException, NoSuchMethodException, SecurityException {
+	public JpkiWrapper() throws JpkiException, IOException, ClassNotFoundException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 		if(initializeError != null) {
 			if(initializeError instanceof JpkiException) {
 				throw (JpkiException)initializeError;
@@ -110,19 +68,11 @@ public class JpkiWrapper {
 				throw (IOException)initializeError;
 			} else if(initializeError instanceof ClassNotFoundException) {
 				throw (ClassNotFoundException)initializeError;
-			} else if(initializeError instanceof NoSuchFieldException) {
-				throw (NoSuchFieldException)initializeError;
-			} else if(initializeError instanceof SecurityException) {
-				throw (SecurityException)initializeError;
-			} else if(initializeError instanceof IllegalArgumentException) {
-				throw (IllegalArgumentException)initializeError;
-			} else if(initializeError instanceof IllegalAccessException) {
-				throw (IllegalAccessException)initializeError;
 			} else {
 				throw new JpkiException(initializeError.getMessage(), initializeError.getLocalizedMessage(), initializeError);
 			}
 		}
-		instance = clsJpkiWrapper.newInstance();
+		instance = clsJpkiWrapper.getConstructor().newInstance();
 		methodSetApplicationName = clsJpkiWrapper.getDeclaredMethod("setApplicationName", String.class);
 		methodSetApplicationVersion = clsJpkiWrapper.getDeclaredMethod("setApplicationVersion", String.class);
 		methodAddSignature = clsJpkiWrapper.getDeclaredMethod("addSignature", OutputStream.class, PDDocument.class, String.class, String.class, Date.class, String.class, String.class, SignatureOptions.class);
@@ -164,93 +114,76 @@ public class JpkiWrapper {
 			throw e;
 		}
 	}
-	
+
+	/* package private */ static boolean is64bitJavaVM() {
+		String s = System.getProperty("os.arch");
+		return s != null && s.contains("64");
+	}
+
 	private static ClassLoader createClassLoader(File jpkiInstallPath) throws ClassNotFoundException, IOException {
 		boolean is64 = is64bitJavaVM();
-		
+
+		String[] jarNames = is64 ?
+				new String[] { "JPKICryptSignJNI64.jar", "JPKIUserCertService64.jar" }:
+				new String[] { "JPKICryptSignJNI.jar",   "JPKIUserCertService.jar" };
+
 		List<URL> jars = new ArrayList<URL>();
-		File jarJPKICryptSignJNI = new File(jpkiInstallPath, (is64 ? "JPKICryptSignJNI64.jar" : "JPKICryptSignJNI.jar"));
-		if(jarJPKICryptSignJNI.exists()) {
-			jars.add(jarJPKICryptSignJNI.toURI().toURL());
+		for(String jarName : jarNames) {
+			File jar = new File(jpkiInstallPath, jarName);
+			if(jar.exists()) {
+				jars.add(jar.toURI().toURL());
+			}
 		}
-		File jarJPKIUserCertService = new File(jpkiInstallPath, (is64 ? "JPKIUserCertService64.jar" : "JPKIUserCertService.jar"));
-		if(jarJPKIUserCertService.exists()) {
-			jars.add(jarJPKIUserCertService.toURI().toURL());
-		}
-		URLClassLoader loader = new InternalClassLoader(is64, jars, JpkiWrapper.class.getClassLoader());
+
+		URLClassLoader loader = new InternalClassLoader(jars, JpkiWrapper.class.getClassLoader());
 		return loader;
 	}
-	
-	private static boolean is64bitJavaVM() {
-		String s = System.getProperty("sun.arch.data.model");
-		if("64".equals(s)) {
-			return true;
-		}
-		if("32".equals(s)) {
-			return false;
-		}
-		return false;
-	}
-	
+
 	private static File getJpkiInstallPath() {
-		String s = null;
+		// find from registry
 		try {
-			s = Advapi32Util.registryGetStringValue(WinReg.HKEY_LOCAL_MACHINE, "SOFTWARE\\JPKI", "InstallPath");
-		} catch(Win32Exception e) {
-			if(e.getErrorCode() == 2) {
+			String path1 = Advapi32Util.registryGetStringValue(WinReg.HKEY_LOCAL_MACHINE, "SOFTWARE\\JPKI", "InstallPath");
+			if(path1 != null) {
+				File dir = new File(path1);
+				if(dir.isDirectory()) {
+					return dir;
+				}
+			}
+		} catch(Exception e) {
+			if(e instanceof Win32Exception && ((Win32Exception)e).getErrorCode() == 2) {
 				//「指定されたファイルが見つかりません」の時はスタックトレースを出力しません。
 			} else {
 				e.printStackTrace();
 			}
-		} catch(Exception e) {
-			e.printStackTrace();
 		}
-		if(s != null) {
-			File dir = new File(s);
-			if(dir.exists() && dir.isDirectory()) {
-				return dir;
-			}
+
+		// find from PATH env
+		String path2 = findPath("JPKIMenu.exe");
+		if(path2 != null) {
+			return new File(path2).getParentFile();
 		}
+
+		// not found
 		return null;
 	}
-	
-	private static void addLibraryPath(String path) throws NoSuchFieldException, SecurityException, IllegalArgumentException, IllegalAccessException {
-		System.setProperty("java.library.path", path + ";" + System.getProperty("java.library.path"));
-		 
-		Field sysPathsField = ClassLoader.class.getDeclaredField("sys_paths");
-		sysPathsField.setAccessible(true);
-		sysPathsField.set(null, null);
+
+	private static String findPath(String executableFilename) {
+		char[] pszPath = new char[1024];
+		Pointer ppszOtherDirs = Pointer.NULL;
+
+		char[] src = executableFilename.toCharArray();
+		System.arraycopy(src, 0, pszPath, 0, src.length);
+		boolean ret = Shlwapi.INSTANCE.PathFindOnPathW(pszPath, ppszOtherDirs);
+		if(ret) {
+			return new String(pszPath).trim();
+		} else {
+			return null;
+		}
 	}
-	
-	private static File getLibraryPath() throws URISyntaxException {
-		ProtectionDomain pd = JpkiWrapper.class.getProtectionDomain();
-		CodeSource cs = pd.getCodeSource();
-		URL location = cs.getLocation();
-		URI uri = location.toURI();
-		return new File(uri).getParentFile();
-	}
-	
-	private static void copy(File src, File dst) throws IOException {
-		if(!src.exists()) {
-			throw new FileNotFoundException(src.getAbsolutePath());
-		}
-		if(dst.exists() && dst.lastModified() == src.lastModified() && dst.length() == src.length()) {
-			return;
-		}
-		InputStream input = null;
-		OutputStream output = null;
-		try {
-			input = new FileInputStream(src);
-			output = new FileOutputStream(dst);
-			IOUtils.copy(input, output);
-		} finally {
-			if(output != null) {
-				try { output.close(); } catch(Exception e) {}
-			}
-			if(input != null) {
-				try { input.close(); } catch(Exception e) {}
-			}
-		}
-		dst.setLastModified(src.lastModified());
+
+	public interface Shlwapi extends Library {
+		Shlwapi INSTANCE = (Shlwapi)Native.load("shlwapi", Shlwapi.class);
+
+		boolean PathFindOnPathW(char[] pszPath, Pointer ppszOtherDirs);
 	}
 }
